stopping artist image overlapping header

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ select{
     position:fixed;
     top:0px;
     left:0px;
+    z-index: 999;
 }
 #header .floatLeft img{
     height:40px;
